fix: z-index header

--- a/src/sass/_header.sass
+++ b/src/sass/_header.sass
@@ -11,7 +11,7 @@ h1
     margin: 0
 .top
     background-color: $bg-main
-    z-index: -5
+    // z-index: -5
     padding-top: 2%
     position: relative
 .button
@@ -28,6 +28,7 @@ h1
     text-align: center
     text-transform: uppercase
     padding: 13px 33px
+    cursor: pointer
     
     &-medium
         padding: 19px 41px
@@ -194,6 +195,7 @@ h1
         line-height: 16px
         text-transform: uppercase
         font-weight: 400
+        cursor: pointer
         &__link
             color: $accent-text-color
 
@@ -201,4 +203,4 @@ h1
     a 
         
         text-decoration: none
-        cursor: pointer
+        
